<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPN Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Num1">1</string>
    <string name="Num2">2</string>
    <string name="Num3">3</string>
    <string name="Num4">4</string>
    <string name="Num5">5</string>
    <string name="Num6">6</string>
    <string name="Num7">7</string>
    <string name="Num8">8</string>
    <string name="Num9">9</string>
    <string name="Num0">0</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Multiply">×</string>
    <string name="Divide">÷</string>
    <string name="Neg">(+/−)</string>
    <string name="Point">.</string>
    <string name="Mod">%</string>
    <string name="Back">BACK</string>
    <string name="Space">SPACE</string>
    <string name="Clear">CLEAR</string>
    <string name="ExampleText">Example Text</string>
    <string name="ErrorInsuffcientNumbers">ERROR: Operations require 2 numbers</string>
    <string name="Error2DecimalPoints">ERROR: Multiple Decimal Points</string>
</resources>