<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".Calculator"
              android:layout_weight="1"
              android:background="@android:color/white">



    <TextView
        android:id="@+id/textViewStack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExampleText"
        android:layout_gravity="top"
        android:singleLine="true"
        android:ellipsize="start"
        android:scrollHorizontally="true"
        android:padding="4dp"
        android:textSize="14sp"
        android:gravity="right"/>
    <TextView
        android:id="@+id/textViewCurrentNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExampleText"
        android:layout_gravity="top"
        android:singleLine="true"
        android:ellipsize="start"
        android:scrollHorizontally="true"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="right"/>

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button android:layout_weight=".25"
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num1"
                    android:textSize="16sp"/>

            <Button android:layout_weight=".25"
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num2"
                    android:textSize="16sp"/>

            <Button android:layout_weight=".25"
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num3"
                    android:textSize="16sp"/>
            <Button android:layout_weight=".25"
                    android:id="@+id/buttonMultiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Multiply"
                    android:textSize="16sp"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button android:layout_weight=".25"
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num4"
                    android:textSize="16sp"/>

            <Button android:layout_weight=".25"
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num5"
                    android:textSize="16sp"/>

            <Button android:layout_weight=".25"
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num6"
                    android:textSize="16sp"/>
            <Button android:layout_weight=".25"
                    android:id="@+id/buttonDivide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Divide"
                    android:textSize="16sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button android:layout_weight=".25"
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num7"
                    android:textSize="16sp"/>

            <Button android:layout_weight=".25"
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num8"
                    android:textSize="16sp"/>

            <Button android:layout_weight=".25"
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num9"
                    android:textSize="16sp"/>
            <Button android:layout_weight=".25"
                    android:id="@+id/buttonPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Plus"
                    android:textSize="16sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button android:layout_weight=".25"
                    android:id="@+id/buttonNeg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Neg"
                    android:textSize="16sp"/>

            <Button android:layout_weight=".25"
                    android:id="@+id/button0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Num0"
                    android:textSize="16sp"/>

            <Button android:layout_weight=".25"
                    android:id="@+id/buttonPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Point"
                    android:textSize="16sp"/>

            <Button android:layout_weight=".25"
                    android:id="@+id/buttonMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Minus"
                    android:textSize="16sp"/>

        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button android:layout_weight=".25"
                    android:id="@+id/buttonBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Back"
                    android:textSize="12sp"/>
            <Button android:layout_weight=".25"
                    android:id="@+id/buttonSpace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Space"
                    android:textSize="12sp"/>
            <Button android:layout_weight=".25"
                    android:id="@+id/buttonClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Clear"
                    android:textSize="12sp"/>
            <Button android:layout_weight=".25"
                    android:id="@+id/buttonMod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Mod"
                    android:textSize="16sp"/>

        </TableRow>
    </TableLayout>
</LinearLayout>